--- a/02 - Android/app/src/main/res/values/strings.xml
+++ b/02 - Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">b2023-gr1sw-asfv</string>
-    <string name="saludo">Buenos Dias</string>
+    <string name="descripcion">Hola, buen dia</string>
+    <color name="textc">#101A55</color>
+    <color name="fondoc">#F16B6B</color>
 </resources>
