Deber01 completo, practica 16 y 17 terminado

--- a/02 - Android/app/src/main/res/values/strings.xml
+++ b/02 - Android/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     </string-array>
     <color name="textc">#101A55</color>
     <color name="fondoc">#F16B6B</color>
+    <string name="title_activity_google_maps_inicio">GoogleMapsInicio</string>
 </resources>
